force-app/main/default/objects/Data_Sync_Field_Map__c/Data_Sync_Field_Map__c.object-meta.xml
<CustomObject>
    <label>Data Sync Field Map</label>
    <nameField>
        <displayFormat>DSFM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Sync Field Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>