force-app/main/default/objects/Data_Sync_Field_Map__c/fields/External_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Field_API_Name__c</fullName>
    <label>External Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>