force-app/main/default/objects/Data_Sync_Field_Map__c/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <label>External System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Sync_External_Systems</valueSetName>
    </valueSet>
</CustomField>