force-app/main/default/objects/Data_Sync_Field_Map__c/fields/Is_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to flag this field as the one that contains the value that should be used for upserts.</inlineHelpText>
    <label>Is External Id</label>
    <type>Checkbox</type>
</CustomField>