force-app/main/default/objects/Data_Sync_Field_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>External_System__c</columns>
    <columns>NAME</columns>
    <columns>External_Field_API_Name__c</columns>
    <columns>Salesforce_Field_API_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Is_External_Id__c</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Context__c</field>
        <operation>equals</operation>
        <value>WellSky Get ReferralSource</value>
    </filters>
    <label>All</label>
</ListView>